一个简单的饼状图
增加了一个简单的饼状图

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".chart.LineChartActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".chart.PieChartActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
